--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="main">
@@ -39,6 +39,6 @@
 
 </body>
 
-<script src="./scriptCalculator.js"></script>
+<script src="/scriptCalculator.js"></script>
 
 </html>
